--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL='mongodb+srv://admin01:i0zk2wfVZfd4uFjv@cluster0.r0de8sl.mongodb.net/?retryWrites=true&w=majority'
+JWT_SECRET="passwordhashkey2023"
 PORT=3001
